--- a/src/editor/ui/EdosuProperties.glade
+++ b/src/editor/ui/EdosuProperties.glade
@@ -30,7 +30,7 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="CircleSize">
-    <property name="lower">3</property>
+    <property name="lower">2</property>
     <property name="upper">7</property>
     <property name="value">5</property>
     <property name="step_increment">0.10000000000000001</property>
@@ -65,14 +65,18 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="SliderMultiplier">
-    <property name="upper">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="lower">0.40000000000000002</property>
+    <property name="upper">3.6000000000000001</property>
+    <property name="value">1</property>
+    <property name="step_increment">0.10000000000000001</property>
+    <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="SliderTickRate">
-    <property name="upper">100</property>
+    <property name="lower">1</property>
+    <property name="upper">4</property>
+    <property name="value">1</property>
     <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="page_increment">2</property>
   </object>
   <object class="GtkAdjustment" id="StackLeniency">
     <property name="upper">20</property>
