--- a/src/viewer/ui/VosuWindow.glade
+++ b/src/viewer/ui/VosuWindow.glade
@@ -223,7 +223,7 @@
         <child>
           <object class="GtkToolbar" id="toolbar">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can_focus">True</property>
             <property name="hexpand">True</property>
             <property name="toolbar_style">icons</property>
             <child>
@@ -276,6 +276,25 @@
                     <property name="create_folders">False</property>
                     <property name="do_overwrite_confirmation">True</property>
                     <property name="title" translatable="yes">Open Replay File</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">False</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkToolItem">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <child>
+                  <object class="GtkButton" id="close_replay_button">
+                    <property name="label">gtk-close</property>
+                    <property name="can_focus">False</property>
+                    <property name="receives_default">False</property>
+                    <property name="use_stock">True</property>
+                    <property name="always_show_image">True</property>
                   </object>
                 </child>
               </object>
