--- a/src/viewer/ui/VosuWindow.glade
+++ b/src/viewer/ui/VosuWindow.glade
@@ -285,22 +285,15 @@
               </packing>
             </child>
             <child>
-              <object class="GtkToolItem">
-                <property name="visible">True</property>
+              <object class="GtkToolButton" id="close_replay_button">
                 <property name="can_focus">False</property>
-                <child>
-                  <object class="GtkButton" id="close_replay_button">
-                    <property name="label">gtk-close</property>
-                    <property name="can_focus">False</property>
-                    <property name="receives_default">False</property>
-                    <property name="use_stock">True</property>
-                    <property name="always_show_image">True</property>
-                  </object>
-                </child>
+                <property name="is_important">True</property>
+                <property name="use_underline">True</property>
+                <property name="stock_id">gtk-close</property>
               </object>
               <packing>
                 <property name="expand">False</property>
-                <property name="homogeneous">False</property>
+                <property name="homogeneous">True</property>
               </packing>
             </child>
           </object>
